refactor: complete arquitectura docs and eliminate mongo traces